[package]
name = "wait4"
version = "0.1.0"
authors = ["ede1998 <online@erik-hennig.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.16"
env_logger = "0.8"
log = "0.4"
clap = "2.33"
boolinator = "2.4"
dirs = "3.0"
